Fixed some warnings per FindBugs.